package rubrica.Models;

public class Checker {

    public boolean validaContatto(){
        return false;
    }
}
