package rubrica.Models;

public class FileManager {
    private Rubrica r;




    public void importaRubrica(String path){

    }

    public void esportaRubrica(String path){

    }
}
